# change_buff_infantry

./: .config.json.swp  .gitignore  AutoAim.cpp  CMakeLists.txt  CMakeLists0.txt  Calib.cpp  HowAddNewModule.md  Optimize.cpp  README.md  RecordSolveData.cpp  TODO.md  bug.md  config copy_new.json  config.json  tempAutoAim.cpp
modules/: interfaceType.hpp  modules.hpp
modules/ControlOptimizer/: CMakeLists.txt  ControlOptimizer.cpp  ControlOptimizer.hpp  README.md
modules/RecordSolver/: CMakeLists.txt  README.md  recordsolver.cpp  recordsolver.hpp
modules/TestSpeed/: CMakeLists.txt  README.md  testspeed.cpp  testspeed.hpp
modules/buff/: BuffCalculator.cpp  BuffCalculator.hpp  BuffController.cpp  BuffController.hpp  BuffDetector.cpp  BuffDetector.hpp  new_buff.md
modules/controller/: CMakeLists.txt  controller.cpp  controller.hpp  type.hpp
modules/detector/: ArmorOneStage.cpp  ArmorOneStage.hpp  CMakeLists.txt  NumberClassifier.cpp  NumberClassifier.hpp  YoloDetector.cpp  YoloDetector.hpp  detector.cpp  detector.hpp  detector2.hpp  type.hpp
modules/driver/: CMakeLists.txt  driver.cpp  driver.hpp  type.hpp
modules/driver/driver.camera/: DaHengCamera.cpp  DaHengCamera.hpp  DxImageProc.h  GxIAPI.h  camera.cpp  camera.hpp
modules/driver/driver.serial/: CRC16.cpp  CRC16.h  serial.cpp  serial.hpp
modules/predictor/: CMakeLists.txt  CarPredictorNew.hpp  MotionModel.cpp  MotionModel.hpp  ekf.hpp  first_state.cpp  optimizeSolve.cpp  optimizeSolve.hpp  predictor.cpp  predictor.hpp  timeEKF.hpp  type.hpp
modules/predictor/old/: MotionModel.hpp  optimizeSolve.cpp  optimizeSolve.hpp  predictor.cpp  predictor.hpp
modules/predictor/old2/: MotionModel.cpp  MotionModel.hpp  predictor.cpp  predictor.hpp  tempMotionModel.hpp  tempMotionModel2.hpp
modules/predictor/old3/: CarPredictor.hpp  MotionModel.cpp  MotionModel.hpp  timeEKF.hpp  tmpModel.hpp
modules/predictor/old_new/: MotionModel.cpp  MotionModel.hpp  predictor.cpp  predictor.hpp  timeEKF.hpp  type.hpp
modules/replayer/: replayer.cpp  replayer.hpp
modules/solver/: CMakeLists.txt  solver.cpp  solver.hpp  type.hpp
modules/tracker/: CMakeLists.txt  TrackerMatcher.hpp  TrackerMatcherWithWholeCar.hpp  tracker.cpp  tracker.hpp  type.hpp
modules/tracker/old/: tracker.cpp  tracker.hpp  type.hpp
record/serial/: 20250706193323.txt  20250731002652.txt  20250910194858.txt  20250910195159.txt  20250910203905.txt  20250911151253.txt  20250912090948.txt  20250917132218.txt  20250919153134.txt  20250919161539.txt  20250920023139.txt  20250920023309.txt  20250920150233.txt  20251113134025.txt  20251113134057.txt  20251113173408.txt  20251115153741.txt  20251115215242.txt  20251121184651.txt  20251123164923.txt
utils/buff_models/blue_buff_debug/: metadata.yaml
utils/buff_models/blue_buff_useless/: best.xml  metadata.yaml
utils/buff_models/blue_model_best/: metadata.yaml
utils/buff_models/buff_mix_416_openvino_model/: buff_mix_416.xml  metadata.yaml
utils/buff_models/red_buff/: metadata.yaml
utils/include/: README.md
utils/include/Location/: location.hpp
utils/include/Log/: log.hpp
utils/include/Param/: param.hpp  param2.hpp
utils/include/Recorder/: recorder.hpp
utils/include/TimeStamp/: TimeStamp.hpp
utils/include/Udpsend/: udpsend.hpp
utils/include/VideoStreamer/: VideoStreamer.hpp  httplib.h
utils/models/: BRpoints_nano.xml  armor_yolo_x.xml  new_model.xml  yolo11n-416sgd4.xml
utils/scripts/: editor.html  removeZoneIdentifier.sh  reverseInternet.ps1  server.py  startGTK.sh
utils/scripts/solverFit/: process-PitchYawFit.py
